--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -1,1 +1,15 @@
-<div class="header-main"></div>
+<div class="header-main">
+    <div class="container">
+        <div class="header-main__inner">
+            <nav class="menu-top">
+                <a href="javascript:;" class="menu-top__link">Как работает сервис</a>
+                <a href="javascript:;" class="menu-top__link">О команде</a>
+                <a href="javascript:;" class="menu-top__link">Прайслист</a>
+            </nav>
+            <div class="header-main__right">
+                <a href="javascript:" class="header-main__lang">EN</a>
+                <a href="javascript:" class="header-main__registration">Зарегистрироваться</a>
+            </div>
+        </div>
+    </div>
+</div>
