First block finish

--- a/src/blocks/modules/block-first/block-first.html
+++ b/src/blocks/modules/block-first/block-first.html
@@ -1,7 +1,52 @@
 <div class="block-first">
     <div class="container">
-        <a href="/" class="block-first__logo">
-            <img src="local/img/logo.svg" alt="">
-        </a>
+        <div class="block-first__inner">
+            <div class="block-first__top">
+                <a href="/" class="block-first__logo">
+                    <img src="local/img/logo.svg" alt="">
+                </a>
+            </div>
+            <div class="title-line">
+                <div class="h1">
+                    <b>Все</b> рекламные площадки блогеров в вашем кармане!
+                </div>
+            </div>
+            <div class="block-first__desc">
+                Ищите блогеров для рекламы ваших продуктов по множеству параметров целевой аудитории среди <b>500 тысяч площадок</b>
+            </div>
+            <div class="block-first-soc">
+                <img class="block-first-soc__icon" src="local/img/sprites/sprite.svg#Telegram" alt="">
+                <img class="block-first-soc__icon" src="local/img/sprites/sprite.svg#Twitch" alt="">
+                <img class="block-first-soc__icon" src="local/img/sprites/sprite.svg#TikTok" alt="">
+                <img class="block-first-soc__icon" src="local/img/sprites/sprite.svg#VK" alt="">
+                <img class="block-first-soc__icon" src="local/img/sprites/sprite.svg#YouTube" alt="">
+                <img class="block-first-soc__icon" src="local/img/sprites/sprite.svg#Instagram" alt="">
+                <img class="block-first-soc__icon" src="local/img/sprites/sprite.svg#Facebook" alt="">
+            </div>
+            <hr>
+            <div class="block-first-items">
+                <div class="block-first-items__item">
+                    <img class="block-first-items__icon" src="local/img/sprites/sprite.svg#UsersThree" alt="">
+                    <div class="block-first-items__text">
+                        <b>500</b> тысяч площадок
+                    </div>
+                </div>
+                <div class="block-first-items__item">
+                    <img class="block-first-items__icon" src="local/img/sprites/sprite.svg#RocketLaunch" alt="">
+                    <div class="block-first-items__text">
+                        Запуск <b>за 2 дня</b>
+                    </div>
+                </div>
+            </div>
+            <a href="javascript:;" class="btn btn_long">Получить доступ</a>
+        </div>
+        <div class="block-first-video">
+            <div class="block-first-video__inner">
+                <a href="https://youtube.com/watch?v=F71qxJKg25w" class="block-first-video__link" data-fancybox>
+                    <img src="local/img/video.png" alt="" class="block-first-video__img">
+                    <img src="local/img/sprites/sprite.svg#play" alt="" class="block-first-video__play">
+                </a>
+            </div>
+        </div>
     </div>
 </div>
