work and team blocks

--- a/src/blocks/modules/block-first/block-first.html
+++ b/src/blocks/modules/block-first/block-first.html
@@ -14,6 +14,7 @@
             <div class="block-first__desc">
                 Ищите блогеров для рекламы ваших продуктов по множеству параметров целевой аудитории среди <b>500 тысяч площадок</b>
             </div>
+
             <div class="block-first-soc">
                 <img class="block-first-soc__icon" src="local/img/sprites/sprite.svg#Telegram" alt="">
                 <img class="block-first-soc__icon" src="local/img/sprites/sprite.svg#Twitch" alt="">
@@ -23,7 +24,9 @@
                 <img class="block-first-soc__icon" src="local/img/sprites/sprite.svg#Instagram" alt="">
                 <img class="block-first-soc__icon" src="local/img/sprites/sprite.svg#Facebook" alt="">
             </div>
+
             <hr>
+
             <div class="block-first-items">
                 <div class="block-first-items__item">
                     <img class="block-first-items__icon" src="local/img/sprites/sprite.svg#UsersThree" alt="">
@@ -38,15 +41,22 @@
                     </div>
                 </div>
             </div>
-            <a href="javascript:;" class="btn btn_long">Получить доступ</a>
+
+            <a href="javascript:;" class="btn-one btn-one_long">Получить доступ</a>
         </div>
+
         <div class="block-first-video">
             <div class="block-first-video__inner">
                 <a href="https://youtube.com/watch?v=F71qxJKg25w" class="block-first-video__link" data-fancybox>
                     <img src="local/img/video.png" alt="" class="block-first-video__img">
-                    <img src="local/img/sprites/sprite.svg#play" alt="" class="block-first-video__play">
+                    <span class="block-first-video__play">
+                        <svg class="block-first-video__play-icon">
+                            <use xlink:href="local/img/sprite.svg#play"></use>
+                        </svg>
+                    </span>
                 </a>
             </div>
         </div>
+
     </div>
 </div>
