--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="header-main__inner">
             <nav class="menu-top">
-                <a href="javascript:;" class="menu-top__link">Как работает сервис</a>
-                <a href="javascript:;" class="menu-top__link">О команде</a>
+                <a href="#work" class="menu-top__link">Как работает сервис</a>
+                <a href="#team" class="menu-top__link">О команде</a>
                 <a href="javascript:;" class="menu-top__link">Прайслист</a>
             </nav>
             <div class="header-main__right">
