--- a/src/blocks/modules/block-work/block-work.html
+++ b/src/blocks/modules/block-work/block-work.html
@@ -1,8 +1,165 @@
-<div class="block-work">
-    <div class="text-center">
-        <div class="title-line">
-            <div class="h2">
-                <b>Как</b> работает сервис
+<div class="block-work" id="work">
+    <div class="container">
+        <div class="text-center">
+            <div class="title-line">
+                <div class="h2">
+                    <b>Как</b> работает сервис
+                </div>
+            </div>
+        </div>
+        <div class="block-work__inner">
+            <div class="block-work__left">
+
+                <nav class="work-step">
+                    <a href="#work1" class="work-step__item work-step__item_active">
+                        <span class="work-step__inner">
+                            <span class="work-step__num">1</span>
+                        </span>
+                    </a>
+                    <img src="local/img/sprites/sprite.svg#StrDown" alt="" class="work-step__str">
+                    <a href="#work2" class="work-step__item">
+                        <span class="work-step__inner">
+                            <span class="work-step__num">2</span>
+                        </span>
+                    </a>
+                    <img src="local/img/sprites/sprite.svg#StrDown" alt="" class="work-step__str">
+                    <a href="#work3" class="work-step__item">
+                        <span class="work-step__inner">
+                            <span class="work-step__num">3</span>
+                        </span>
+                    </a>
+                    <img src="local/img/sprites/sprite.svg#StrDown" alt="" class="work-step__str">
+                    <a href="#work4" class="work-step__item">
+                        <span class="work-step__inner">
+                            <span class="work-step__num">4</span>
+                        </span>
+                    </a>
+                </nav>
+
+            </div>
+            <div class="block-work__right">
+
+                <div class="block-work-item block-work-item_first" id="work1">
+                    <div class="block-work-item__block">
+                        <div class="block-work-item__title">
+                            <b>Найди</b> блогеров из огромного количества по множеству фильтров
+                        </div>
+                        <div class="block-work-item__text">
+                            <ul class="block-work-item__ul">
+                                <li class="block-work-item__li">
+                                    <img src="local/img/sprites/sprite.svg#favorite" alt="" class="block-work-item__icon">
+                                    <span class="block-work-item__short">Категории блогеров</span>
+                                </li>
+                                <li class="block-work-item__li">
+                                    <img src="local/img/sprites/sprite.svg#filter" alt="" class="block-work-item__icon">
+                                    <span class="block-work-item__short">Аудиторные параметры (возраст, гео, пол)</span>
+                                </li>
+                                <li class="block-work-item__li">
+                                    <img src="local/img/sprites/sprite.svg#user-check" alt="" class="block-work-item__icon">
+                                    <span class="block-work-item__short">Отсортируй по доле твоей целевой аудитории в мгновение, и выбери самых подходящих.</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <a href="javascript:;" class="btn-one btn-one_long">Получить доступ</a>
+                    </div>
+                    <img src="local/img/work1.png" alt="" class="block-work-item__img">
+                </div>
+
+                <div class="block-work-item block-work-item_second" id="work2">
+                    <img src="local/img/work2.png" alt="" class="block-work-item__img">
+                    <div class="block-work-item__block">
+                        <div class="block-work-item__title">
+                            <b>Изучи</b> статистику<br>
+                            по множеству параметров
+                        </div>
+                        <div class="block-work-item__text">
+                            <ul class="block-work-item__ul">
+                                <li class="block-work-item__li">
+                                    <img src="local/img/sprites/sprite.svg#ChartPieSlice" alt="" class="block-work-item__icon">
+                                    <span class="block-work-item__short">АТА (доля вашей целевой аудитории у блогера)</span>
+                                </li>
+                                <li class="block-work-item__li">
+                                    <img src="local/img/sprites/sprite.svg#TrendUp" alt="" class="block-work-item__icon">
+                                    <span class="block-work-item__short">Просмотры/видео, ER и т.п</span>
+                                </li>
+                                <li class="block-work-item__li">
+                                    <img src="local/img/sprites/sprite.svg#Coin" alt="" class="block-work-item__icon">
+                                    <span class="block-work-item__short">Цены</span>
+                                </li>
+                            </ul>
+                            <div class="block-work-item__under">
+                                Или закажите подробный анализ блогера, с красивыми графиками, если вы хотите презентовать его клиенту или вашим коллегам.
+                            </div>
+                        </div>
+                        <a href="javascript:;" class="btn-two">
+                            Пример отчета
+                            <svg class="btn-two__icon">
+								<use xlink:href="local/img/sprite.svg#ArrowUpRight"></use>
+							</svg>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="block-work-item block-work-item_third" id="work3">
+                    <div class="block-work-item__block">
+                        <div class="block-work-item__title">
+                            <b>Свяжись</b> с блогерами<br>
+                            и предложи сотрудничество
+                        </div>
+                        <div class="block-work-item__text">
+                            Используйте представленные на платформе контакты блогеров для связи.
+                        </div>
+
+                        <div class="block-work-cloud">
+                            <div class="block-work-cloud__inner">
+                                <img src="local/img/sprites/sprite.svg#SmileyWink" alt="" class="block-work-cloud__icon">
+                                <div class="block-work-cloud__block">
+                                    <div class="block-work-cloud__title">
+                                        Или поручите это нам
+                                    </div>
+                                    <div class="block-work-cloud__text">
+                                        Мы свяжемся с каждым блогером по всем возможным контактам, всего за 200 рублей за один запрос, узнаем цены и условия сотрудничества.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <img src="local/img/work3.png" alt="" class="block-work-item__img">
+                </div>
+
+                <div class="block-work-item block-work-item_fourth" id="work4">
+                    <img src="local/img/work4.png" alt="" class="block-work-item__img">
+                    <div class="block-work-item__block">
+                        <div class="block-work-item__title">
+                            <b>Проведи</b> кампанию<br>
+                            с выбранными блогерами
+                        </div>
+                        <div class="block-work-item__text">
+                            Вы можете самостоятельно провести РК с блогерами.
+                        </div>
+
+                        <div class="block-work-cloud">
+                            <div class="block-work-cloud__inner">
+                                <img src="local/img/sprites/sprite.svg#SmileyWink" alt="" class="block-work-cloud__icon">
+                                <div class="block-work-cloud__block">
+                                    <div class="block-work-cloud__title">
+                                        Или поручите это нам
+                                    </div>
+                                    <div class="block-work-cloud__text">
+                                        Поручите это нашей профессиональной команде, которая сделает всю операционную работу за вас.<br>
+                                        <a href="javascript:;">Подробнее</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="text-center">
+                    <a href="javascript:;" class="btn-one btn-one_long">Получить доступ</a>
+                </div>
             </div>
         </div>
     </div>
