--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -4,7 +4,7 @@
             <nav class="menu-top">
                 <a href="#work" class="menu-top__link">Как работает сервис</a>
                 <a href="#team" class="menu-top__link">О команде</a>
-                <a href="javascript:;" class="menu-top__link">Прайслист</a>
+                <a href="#rate" class="menu-top__link">Прайслист</a>
             </nav>
             <div class="header-main__right">
                 <a href="javascript:" class="header-main__lang">EN</a>
