--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -1,3 +1,15 @@
 <div class="footer-main">
-
+    <div class="container">
+        <div class="footer-top">
+            <a href="/" class="footer-top__logo">
+                <img src="local/img/logo.svg" alt="">
+            </a>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="footer-bottom">
+            SocialFinfer v.1.0 © 2020-2022 SocialFinfer.ru
+        </div>
+    </div>
 </div>
