Мобилка закончена без шапки

--- a/src/blocks/modules/block-first/block-first.html
+++ b/src/blocks/modules/block-first/block-first.html
@@ -6,7 +6,7 @@
                     <img src="local/img/logo.svg" alt="">
                 </a>
             </div>
-            <div class="title-line">
+            <div class="title-line title-line_hide-sm">
                 <div class="h1">
                     <b>Все</b> рекламные площадки блогеров в вашем кармане!
                 </div>
