--- a/src/blocks/modules/block-rate/block-rate.html
+++ b/src/blocks/modules/block-rate/block-rate.html
@@ -1,7 +1,7 @@
 <div class="block-rate" id="rate">
     <div class="container">
         <div class="text-center">
-            <div class="title-line">
+            <div class="title-line title-line_hide-sm">
                 <div class="h2">
                     Тарифы
                 </div>
@@ -15,13 +15,13 @@
                     <div class="block-rate-item__name">На минималках</div>
                     <div class="block-rate-item__desc">Для небольшой компании и на короткий срок</div>
                     <div class="block-rate-item__prices">
-                        <div class="block-rate-item__price block-rate-item__price_50">
+                        <div class="block-rate-item__price">
                             <div class="block-rate-item__label">За месяц</div>
                             <div class="block-rate-item__value">
                                 50 000 руб
                             </div>
                         </div>
-                        <div class="block-rate-item__price block-rate-item__price_50">
+                        <div class="block-rate-item__price">
                             <div class="block-rate-item__label">За год</div>
                             <div class="block-rate-item__value">
                                 500 000 руб
@@ -41,9 +41,9 @@
                 </ul>
                 <hr>
                 <div class="block-rate-item__bottom">
-                    <div class="block-rate-item__price">
-                        <div class="block-rate-item__label">Скидка до 31.12.22</div>
-                        <div class="block-rate-item__value">
+                    <div class="block-rate-item__bottom-price">
+                        <div class="block-rate-item__bottom-label">Скидка до 31.12.22</div>
+                        <div class="block-rate-item__bottom-value">
                             50 000 руб
                         </div>
                     </div>
@@ -57,13 +57,13 @@
                     <div class="block-rate-item__name">Среднесрочный</div>
                     <div class="block-rate-item__desc">Для небольшой компании и на короткий срок</div>
                     <div class="block-rate-item__prices">
-                        <div class="block-rate-item__price block-rate-item__price_50">
+                        <div class="block-rate-item__price">
                             <div class="block-rate-item__label">За месяц</div>
                             <div class="block-rate-item__value">
                                 50 000 руб
                             </div>
                         </div>
-                        <div class="block-rate-item__price block-rate-item__price_50">
+                        <div class="block-rate-item__price">
                             <div class="block-rate-item__label">За год</div>
                             <div class="block-rate-item__value">
                                 500 000 руб
@@ -92,13 +92,13 @@
                     <div class="block-rate-item__name">Максимальный</div>
                     <div class="block-rate-item__desc">Для небольшой компании и на короткий срок</div>
                     <div class="block-rate-item__prices">
-                        <div class="block-rate-item__price block-rate-item__price_50">
+                        <div class="block-rate-item__price">
                             <div class="block-rate-item__label">За месяц</div>
                             <div class="block-rate-item__value">
                                 50 000 руб
                             </div>
                         </div>
-                        <div class="block-rate-item__price block-rate-item__price_50">
+                        <div class="block-rate-item__price">
                             <div class="block-rate-item__label">За год</div>
                             <div class="block-rate-item__value">
                                 500 000 руб
@@ -118,9 +118,9 @@
                 </ul>
                 <hr>
                 <div class="block-rate-item__bottom">
-                    <div class="block-rate-item__price">
-                        <div class="block-rate-item__label">Скидка до 31.12.22</div>
-                        <div class="block-rate-item__value">
+                    <div class="block-rate-item__bottom-price">
+                        <div class="block-rate-item__bottom-label">Скидка до 31.12.22</div>
+                        <div class="block-rate-item__bottom-value">
                             50 000 руб
                         </div>
                     </div>
