--- a/src/blocks/modules/block-team/block-team.html
+++ b/src/blocks/modules/block-team/block-team.html
@@ -7,7 +7,7 @@
                 </div>
             </div>
             <div class="block-team__desc">
-                Мы команда с опытом <b>10 лет</b> в маркетинге и <b>20+ лет</b> в IT
+                Мы команда с опытом <br class="d-md-none"><b>10 лет</b> в маркетинге и <br class="d-md-none"><b>20+ лет</b> в IT
             </div>
             <div class="block-team__parts">
                 <div class="block-team__part">
