--- a/src/blocks/modules/block-work/block-work.html
+++ b/src/blocks/modules/block-work/block-work.html
@@ -112,9 +112,10 @@
 
                         <div class="block-work-cloud">
                             <div class="block-work-cloud__inner">
-                                <img src="local/img/sprites/sprite.svg#SmileyWink" alt="" class="block-work-cloud__icon">
+                                <img src="local/img/sprites/sprite.svg#SmileyWink" alt="" class="block-work-cloud__icon d-none d-md-block">
                                 <div class="block-work-cloud__block">
                                     <div class="block-work-cloud__title">
+                                        <img src="local/img/sprites/sprite.svg#SmileyWink" alt="" class="block-work-cloud__icon d-md-none">
                                         Или поручите это нам
                                     </div>
                                     <div class="block-work-cloud__text">
@@ -141,9 +142,10 @@
 
                         <div class="block-work-cloud">
                             <div class="block-work-cloud__inner">
-                                <img src="local/img/sprites/sprite.svg#SmileyWink" alt="" class="block-work-cloud__icon">
+                                <img src="local/img/sprites/sprite.svg#SmileyWink" alt="" class="block-work-cloud__icon d-none d-md-block">
                                 <div class="block-work-cloud__block">
                                     <div class="block-work-cloud__title">
+                                        <img src="local/img/sprites/sprite.svg#SmileyWink" alt="" class="block-work-cloud__icon d-md-none">
                                         Или поручите это нам
                                     </div>
                                     <div class="block-work-cloud__text">
@@ -157,7 +159,7 @@
                     </div>
                 </div>
 
-                <div class="text-center">
+                <div class="block-work__btn">
                     <a href="javascript:;" class="btn-one btn-one_long">Получить доступ</a>
                 </div>
             </div>
