--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -1,4 +1,4 @@
-<div class="footer-main">
+<footer class="footer-main">
     <div class="container">
         <div class="footer-top">
             <div class="footer-top__left">
@@ -97,4 +97,4 @@
             </div>
         </div>
     </div>
-</div>
+</footer>
