--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -1,4 +1,4 @@
-<div class="header-main">
+<header class="header-main">
     <div class="container">
         <div class="header-main__inner">
 
@@ -14,4 +14,4 @@
             </div>
         </div>
     </div>
-</div>
+</header>
