--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -1,13 +1,26 @@
 <header class="header-main">
     <div class="container">
         <div class="header-main__inner">
+            <div class="header-main__left">
 
-            <nav class="menu-top">
-                <a href="#work" class="menu-top__link">Как работает сервис</a>
-                <a href="#team" class="menu-top__link">О команде</a>
-                <a href="#rate" class="menu-top__link">Прайслист</a>
-            </nav>
+                <a href="javascript:;" class="menu-top-btn">
+                    <span class="menu-top-btn__icon"></span>
+                </a>
 
+                <div class="menu-top">
+                    <div class="menu-top__top">
+                        <a href="javascript:;" class="menu-top__close"></a>
+                        <a href="javascript:;" class="menu-top__lang">EN</a>
+                    </div>
+                    <nav class="menu-top__inner">
+                        <a href="#work" class="menu-top__link">Как работает сервис</a>
+                        <a href="#team" class="menu-top__link">О команде</a>
+                        <a href="#rate" class="menu-top__link">Прайслист</a>
+                    </nav>
+                    <a href="javascript:;" class="menu-top__registration">Зарегистрироваться</a>
+                </div>
+
+            </div>
             <div class="header-main__right">
                 <a href="javascript:" class="header-main__lang">EN</a>
                 <a href="javascript:" class="header-main__registration">Зарегистрироваться</a>
