--- a/src/blocks/modules/block-first/block-first.html
+++ b/src/blocks/modules/block-first/block-first.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
 
-            <a href="javascript:;" class="btn-one btn-one_long">Получить доступ</a>
+            <a class="btn-one btn-one_long" href="#window-one" data-fancybox>Получить доступ</a>
         </div>
 
         <div class="block-first-video">
