--- a/src/blocks/modules/block-rate/block-rate.html
+++ b/src/blocks/modules/block-rate/block-rate.html
@@ -47,7 +47,7 @@
                             50 000 руб
                         </div>
                     </div>
-                    <a href="javascript:;" class="btn-one btn-one_middle btn-one_no-border">Получить</a>
+                    <a class="btn-one btn-one_middle btn-one_no-border" href="#window-one" data-fancybox>Получить</a>
                 </div>
             </div>
 
@@ -83,7 +83,7 @@
                 </ul>
                 <hr>
                 <div class="block-rate-item__bottom">
-                    <a href="javascript:;" class="btn-one btn-one_full-width btn-one_no-border">Получить</a>
+                    <a class="btn-one btn-one_full-width btn-one_no-border" href="#window-one" data-fancybox>Получить</a>
                 </div>
             </div>
 
@@ -124,7 +124,7 @@
                             50 000 руб
                         </div>
                     </div>
-                    <a href="javascript:;" class="btn-one btn-one_middle btn-one_no-border">Получить</a>
+                    <a class="btn-one btn-one_middle btn-one_no-border" href="#window-one" data-fancybox>Получить</a>
                 </div>
             </div>
 
