--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -17,13 +17,13 @@
                         <a href="#team" class="menu-top__link">О команде</a>
                         <a href="#rate" class="menu-top__link">Прайслист</a>
                     </nav>
-                    <a href="javascript:;" class="menu-top__registration">Зарегистрироваться</a>
+                    <a class="menu-top__registration" href="#window-one" data-fancybox>Зарегистрироваться</a>
                 </div>
 
             </div>
             <div class="header-main__right">
                 <a href="javascript:" class="header-main__lang">EN</a>
-                <a href="javascript:" class="header-main__registration">Зарегистрироваться</a>
+                <a class="header-main__registration" href="#window-one" data-fancybox>Зарегистрироваться</a>
             </div>
         </div>
     </div>
