--- a/src/blocks/modules/block-work/block-work.html
+++ b/src/blocks/modules/block-work/block-work.html
@@ -60,7 +60,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <a href="javascript:;" class="btn-one btn-one_long">Получить доступ</a>
+                        <a class="btn-one btn-one_long" href="#window-one" data-fancybox>Получить доступ</a>
                     </div>
                     <img src="local/img/work1.png" alt="" class="block-work-item__img">
                 </div>
@@ -160,7 +160,7 @@
                 </div>
 
                 <div class="block-work__btn">
-                    <a href="javascript:;" class="btn-one btn-one_long">Получить доступ</a>
+                    <a class="btn-one btn-one_long" href="#window-one" data-fancybox>Получить доступ</a>
                 </div>
             </div>
         </div>
