--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -9,7 +9,7 @@
 
                 <div class="menu-top">
                     <div class="menu-top__top">
-                        <a href="javascript:;" class="menu-top__close"></a>
+                        <a href="javascript:;" class="menu-top__close close-icon"></a>
                         <a href="javascript:;" class="menu-top__lang">EN</a>
                     </div>
                     <nav class="menu-top__inner">
