--- a/src/blocks/modules/window-one/window-one.html
+++ b/src/blocks/modules/window-one/window-one.html
@@ -1,9 +1,10 @@
 <div class="window-one" id="window-one">
-    <a href="javascript::" class="window-one__close" data-fancybox-close>
+    <a href="javascript::" class="window-one__close d-none d-md-block" data-fancybox-close>
         <svg class="window-one__close-icon">
             <use xlink:href="local/img/sprite.svg#close-window"></use>
         </svg>
     </a>
+    <a href="javascript::" class="window-one__close close-icon d-md-none" data-fancybox-close></a>
     <div class="window-one__title">
         Оставь контакты, получи бесплатный доступ к beta
     </div>
