--- a/src/blocks/modules/block-team/block-team.html
+++ b/src/blocks/modules/block-team/block-team.html
@@ -31,8 +31,8 @@
             </div>
         </div>
 
-        <div class="block-team-items">
-            <div class="block-team-item">
+        <div class="block-team-items carousel">
+            <div class="block-team-item carousel__slide">
                 <div class="block-team-item__top">
                     <div class="block-team-item__pict block-team-item__pict_one">
                         <img src="local/img/face1.png" alt="" class="block-team-item__img">
@@ -51,7 +51,7 @@
                     Lorem ipsum dolor sit amet consectetur. Auctor sit non rhoncus augue et dolor ut. Sodales orci odio id pellentesque a ultrices mauris mauris elit. Vitae fermentum hendrerit mattis augue risus placerat.
                 </div>
             </div>
-            <div class="block-team-item">
+            <div class="block-team-item carousel__slide">
                 <div class="block-team-item__top">
                     <div class="block-team-item__pict block-team-item__pict_two">
                         <img src="local/img/face2.png" alt="" class="block-team-item__img">
@@ -70,7 +70,7 @@
                     Lorem ipsum dolor sit amet consectetur. Auctor sit non rhoncus augue et dolor ut.
                 </div>
             </div>
-            <div class="block-team-item">
+            <div class="block-team-item carousel__slide">
                 <div class="block-team-item__top">
                     <div class="block-team-item__pict block-team-item__pict_three">
                         <img src="local/img/face3.png" alt="" class="block-team-item__img">
@@ -89,7 +89,7 @@
                     Lorem ipsum dolor sit amet consectetur. Auctor sit non rhoncus augue et dolor ut. Sodales orci odio id pellentesque a ultrices mauris mauris elit. Vitae fermentum hendrerit mattis augue risus placerat.
                 </div>
             </div>
-            <div class="block-team-item">
+            <div class="block-team-item carousel__slide">
                 <div class="block-team-item__top">
                     <div class="block-team-item__pict block-team-item__pict_three">
                         <img src="local/img/face3.png" alt="" class="block-team-item__img">
@@ -108,7 +108,7 @@
                     Lorem ipsum dolor sit amet consectetur. Auctor sit non rhoncus augue et dolor ut. Sodales orci odio id pellentesque a ultrices mauris mauris elit. Vitae fermentum hendrerit mattis augue risus placerat.
                 </div>
             </div>
-            <div class="block-team-item">
+            <div class="block-team-item carousel__slide">
                 <div class="block-team-item__top">
                     <div class="block-team-item__pict block-team-item__pict_one">
                         <img src="local/img/face1.png" alt="" class="block-team-item__img">
@@ -127,7 +127,7 @@
                     Lorem ipsum dolor sit amet consectetur. Auctor sit non rhoncus augue et dolor ut. Sodales orci odio id pellentesque a ultrices mauris mauris elit. Vitae fermentum hendrerit mattis augue risus placerat.
                 </div>
             </div>
-            <div class="block-team-item">
+            <div class="block-team-item carousel__slide">
                 <div class="block-team-item__top">
                     <div class="block-team-item__pict block-team-item__pict_two">
                         <img src="local/img/face2.png" alt="" class="block-team-item__img">
