--- a/src/blocks/modules/block-work/block-work.html
+++ b/src/blocks/modules/block-work/block-work.html
@@ -1,7 +1,8 @@
-<div class="block-work" id="work">
+<div class="block-work">
     <div class="container">
         <div class="text-center">
             <div class="title-line">
+                <div class="anchor-top" id="work"></div>
                 <div class="h2">
                     <b>Как</b> работает сервис
                 </div>
@@ -39,7 +40,8 @@
             </div>
             <div class="block-work__right">
 
-                <div class="block-work-item block-work-item_first" id="work1">
+                <div class="block-work-item block-work-item_first">
+                    <div class="anchor-top" id="work1"></div>
                     <div class="block-work-item__block">
                         <div class="block-work-item__title">
                             <b>Найди</b> блогеров из огромного количества по множеству фильтров
@@ -65,7 +67,8 @@
                     <img src="local/img/work1.png" alt="" class="block-work-item__img">
                 </div>
 
-                <div class="block-work-item block-work-item_second" id="work2">
+                <div class="block-work-item block-work-item_second">
+                    <div class="anchor-top" id="work2"></div>
                     <img src="local/img/work2.png" alt="" class="block-work-item__img">
                     <div class="block-work-item__block">
                         <div class="block-work-item__title">
@@ -100,7 +103,8 @@
                     </div>
                 </div>
 
-                <div class="block-work-item block-work-item_third" id="work3">
+                <div class="block-work-item block-work-item_third">
+                    <div class="anchor-top" id="work3"></div>
                     <div class="block-work-item__block">
                         <div class="block-work-item__title">
                             <b>Свяжись</b> с блогерами<br>
@@ -129,7 +133,8 @@
                     <img src="local/img/work3.png" alt="" class="block-work-item__img">
                 </div>
 
-                <div class="block-work-item block-work-item_fourth" id="work4">
+                <div class="block-work-item block-work-item_fourth">
+                    <div class="anchor-top" id="work4"></div>
                     <img src="local/img/work4.png" alt="" class="block-work-item__img">
                     <div class="block-work-item__block">
                         <div class="block-work-item__title">
