--- a/src/blocks/modules/block-rate/block-rate.html
+++ b/src/blocks/modules/block-rate/block-rate.html
@@ -1,4 +1,5 @@
-<div class="block-rate" id="rate">
+<div class="block-rate">
+    <div class="anchor-top" id="rate"></div>
     <div class="container">
         <div class="text-center">
             <div class="title-line title-line_hide-sm">
